--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -64,11 +64,7 @@
                                 class="caret"></span></a>
                         <ul id="arrow-menu" >
                                 <div class="user-section">
-                                    {% if request.session.username|length >= 7 %}
-                                        <span class="username">{{ request.session.username|slice:"0:7" }}...</span>
-                                    {% else %}
-                                        <span class="username">{{ request.session.username }}</span>
-                                    {% endif %}
+                                        <span>{{ request.session.username }}</span>
                                 </div>
                                 <br/>
                                 <div>
