--- a/biblioteca_sistedes/templates/biblioteca_sistedes/bulletin_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/bulletin_create.html
@@ -15,7 +15,7 @@
         </div>
         <div class="form-row">
             <div class="form-row-component-alone">
-                <label for="bulletin_file"><h4>Adjunto:</h4></label> <input type="file" name="bulletin_file">
+                <label for="bulletin_file"><h4>Adjunto:</h4></label> <input accept="application/pdf" type="file" name="bulletin_file">
             </div>
         </div>
         </br>
