--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -19,15 +19,17 @@
 			<thead>
 				<tr>
 					<th>Nombre</th>
+                    <th>Título</th>
+                    <th>Acciones</th>
 				</tr>
 
 			</thead>
 			<tbody>
 				{% for key in object_list %}
 				<tr style="border-bottom: 1px solid black;">
-					<td>{{ key.id }}</td>
+					<td>{{ key.name }}</td>
 
-					<td >{{ key.name }}</td>
+					<td >{{ key.title }}</td>
 
 					<td style="width: auto;">
 						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
