--- a/biblioteca_sistedes/templates/biblioteca_sistedes/list_of_articles.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/list_of_articles.html
@@ -6,7 +6,7 @@
 {% csrf_token %}
 
     <h1>El autor {{author_name}} ha publicado {{ article_list|length }} artículo(s):</h1>
-    {% for ar in article_list.all %}
+    {% for ar in article_list %}
         <article>
             <header class="wrapper">
                 <h3>
@@ -21,12 +21,12 @@
             <p style="font-size: 0.8em;" id="text-hightlight">
                 <strong>Autores: </strong>
                 {% for author in ar.author_ids.all %}
-                 <a href="/autor/?txtAutor={{author.name}} {{author.middle_name}} {{author.last_name}}/">{{author.name}} {{author.middle_name}} {{author.last_name}}</a>&nbsp;/&nbsp;
+                 <a href="/autor/?autor={{author.name}} {{author.middle_name}} {{author.last_name}}/">{{author.name}} {{author.middle_name}} {{author.last_name}}</a>&nbsp;/&nbsp;
                 {% endfor %}
                 <br/>
                 <strong> Palabras Clave: </strong>
                 {% for keyword in ar.keyword_ids.all %}
-                    <a href="/tag/{{keyword.name}}/"> {{keyword.name}} </a>&nbsp;-&nbsp;
+                    <a href="/tag/{{keyword.name}}/"> {{keyword.name}} </a>{% if not forloop.last %}&nbsp;-&nbsp;{% endif %}
                 {% endfor %}
             </p>
         </article>
