--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -173,7 +173,7 @@
               <input type="hidden" id="objectType" name="objectType">
                   <div >
                       <div>
-                          <label for="articleFile"><h4>Adjunto:</h4></label> <input name="articleFile" id="articleFile" type="file" accept="application/pdf">
+                          <label for="articleFile"><h4>Adjunto:</h4></label> <input required="true" name="articleFile" id="articleFile" type="file" accept="application/pdf">
                       </div>
 
                   </div>
