--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -44,7 +44,7 @@
                 <label for="ed_ar"><h4>Edición:</h4></label> {{ form_article.edition_id }}
             </div>
             <div class="form-row-component">
-                <label for="article_file"><h4>Adjunto:</h4></label> <input accept="application/pdf" type="file" name="article_file">
+                <label for="article_file" ><h4>Adjunto:</h4></label> <input required="true" accept="application/pdf" type="file" name="article_file">
             </div>
         </div>
         {% else %}
