--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_detail.html
@@ -8,25 +8,27 @@
 <div class="row">
     <div class="">
         <div class="">
-            <label for="name_ar"><h4>Nombre:</h4></label> {{ article.name }}
+            <label for="name_ar"><h3>Nombre:</h3></label> {{ article.name }}
         </div>
         <div class="form-group">
-            <label><h4>Año:</h4></label> {{ article.year }}
+            <label><h3>Año:</h3></label> {{ article.year }}
         </div>
         <div class="form-group">
-            <label><h4>Descripción:</h4></label> {{ article.description|safe  }}
+            <label><h3>Descripción:</h3></label> {{ article.description|safe  }}
         </div>
         <div class="form-group">
-            <label><h4>Responsables del track:</h4>
+            <label><h3>Responsables del track:</h3>
             <ul>
             {% for user in article.user_ids.all %}
                 <li> {{user.name}} {{user.surnames}} </li>
             {% endfor %}
             </ul>
         </div>
+        {% if article.url_file %}
         <div class="form-group">
-            <label><h4>Archivo:</h4></label> <a href="/download/{{article.id }}?type=a" target="_blank"> {{ article.name }} </a>
+            <label><h3>Archivo:</h3></label> <a href="/download/{{article.id }}?type=a" target="_blank"> {{ article.name }} </a>
         </div>
+        {% endif %}
     </div>
 </div>
 </br>
@@ -46,6 +48,7 @@
 					<td >{{ key.name }}</td>
 
 					<td style="width: auto;">
+                        <a class="btn btn-primary" href="/keyword_view/{{ key.id }}/"><i class="fa fa-eye fa-2x"></i></a>
 						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
 						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
