--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -32,6 +32,7 @@
 					<td >{{ key.title }}</td>
 
 					<td style="width: auto;">
+                        <a class="btn btn-primary" href="/keyword_view/{{ key.id }}/"><i class="fa fa-eye fa-2x"></i></a>
 						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
 						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
