--- a/biblioteca_sistedes/templates/biblioteca_sistedes/advanced_search_engine.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/advanced_search_engine.html
@@ -66,7 +66,7 @@
                                 <a href=""> {{keyword.name}} </a>&nbsp;-&nbsp;
                             {% endfor %}
                     </p>
-                        <a href="">...leer artículo</a>
+                        <a href="/articulo/{{ conference.id }}/">...leer artículo</a>
                     </p>
                 </article>
             {% endfor %}
