--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -4,7 +4,7 @@
     {% block title %}
     <title>Inicio de sesión | Biblioteca sistedes</title>
     {% endblock %}
-    <link href="https://biblioteca.sistedes.es/wp-content/themes/sistedes/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link rel="shortcut icon" type="image/png" src="{% static 'biblioteca_sistedes/img/favicon.ico' %}">
     {% block head %}
     <script src="{% static 'biblioteca_sistedes/js/editor_html.js' %}" type="text/javascript"></script>
     <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
