--- a/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/user_registration.html
@@ -47,7 +47,7 @@
                      <span class="text-match-password"></span>
                 </div>
             </div>
-            <div class="form-row-component">
+            <div class="form-row-component-alone-oc">
                 <label for="rol_user"><h4>Rol:</h4></label> {{ form_user.rol }}
             </div>
         </div>
