--- a/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/article_create.html
@@ -49,7 +49,7 @@
         </div>
         {% else %}
         <div class="form-row">
-            <div class="form-row-component">
+            <div class="form-row-component-alone-oc">
                 <label for="ed_ar"><h4>Edición:</h4></label> {{ form_article.edition_id }}
             </div>
         </div>
