--- a/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/keyword_list.html
@@ -8,7 +8,7 @@
         </br>
         </br>
         </br>
-        <button style="float: right;" class="button_form" onclick="window.location.href='/keyword_create/'" >Añadir + </button>
+        <button style="float: right;" class="button_form" onclick="showWizardKeyWord()" >Añadir + </button>
         <input placeholder="Buscar..." style="width: 600;" id="myInput" type="text" onkeyup="search_table()">
         <input alt="Buscar"
                src="{% static 'biblioteca_sistedes/img/search.png' %}"
@@ -19,7 +19,6 @@
 			<thead>
 				<tr>
 					<th>Nombre</th>
-                    <th>Título</th>
                     <th>Acciones</th>
 				</tr>
 
@@ -28,12 +27,8 @@
 				{% for key in object_list %}
 				<tr style="border-bottom: 1px solid black;">
 					<td>{{ key.name }}</td>
-
-					<td >{{ key.title }}</td>
-
 					<td style="width: auto;">
-                        <a class="btn btn-primary" href="/keyword_view/{{ key.id }}/"><i class="fa fa-eye fa-2x"></i></a>
-						<a class="btn btn-primary" href="/keyword_update/{{ key.id }}/"><i class="fa fa-edit fa-2x"></i></a>
+						<a id="cursor-key" class="btn btn-primary" onclick="showWizardKeyWord({{ key.id }},'{{ key.name }}')"><i class="fa fa-edit fa-2x"></i></a>
 						<a class="btn btn-danger" href="/keyword_delete/{{ key.id }}/" onclick="clicked(event)"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
