--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_create.html
@@ -22,6 +22,19 @@
             <label for="last_au"><h4>Segundo apellido:</h4></label> {{ form_author.last_name }}
         </div>
     </div>
+    <div class="form-row">
+        <div class="form-row-component">
+            <label for="co_au"><h4>País:</h4></label> {{ form_author.country }}
+        </div>
+        <div class="form-row-component">
+            <label for="uni_au"><h4>Universidad:</h4></label> {{ form_author.university }}
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-row-component-alone-oc">
+            <label for="de_au"><h4>Departamento:</h4></label> {{ form_author.department }}
+        </div>
+    </div>
     </br>
     <div>
         <div>
