--- a/biblioteca_sistedes/templates/biblioteca_sistedes/conference_create.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/conference_create.html
@@ -21,6 +21,11 @@
             </div>
         </div>
     </div>
+    <div class="form-row">
+        <div class="form-row-component-alone">
+            <label for="desc_con"><h4>Descripción:</h4></label> {{ form_conference.description }}
+        </div>
+    </div>
     </br>
     <div>
         <div class="footer-form">
