--- a/biblioteca_sistedes/templates/biblioteca_sistedes/advanced_search_engine.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/advanced_search_engine.html
@@ -58,7 +58,7 @@
                     <p style="font-size: 0.8em;" id="text-hightlight">
                         <strong>Autores: </strong>
                             {% for author in article.author_ids.all %}
-                                <a href="/autor/?autor={{author.name}} {{author.middle_name}} {{author.last_name}}/">{{author.name}} {{author.middle_name}} {{author.last_name}}</a>&nbsp;/&nbsp;
+                                <a href="/autor/?autor={{author.name}} {{author.middle_name}} {{author.last_name}}">{{author.name}} {{author.middle_name}} {{author.last_name}}</a>{% if not forloop.last %}&nbsp;/&nbsp;{% endif %}
                             {% endfor %}
                         <br/>
                         <strong> Palabras Clave: </strong>
