--- a/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/author_list.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block container %}
 {% load static %}
+        <div class="loader"></div>
 		<h2><u> Autores </u></h2>
         </br>
         </br>
