--- a/biblioteca_sistedes/static/biblioteca_sistedes/css/form_style.css
+++ b/biblioteca_sistedes/static/biblioteca_sistedes/css/form_style.css
@@ -10,6 +10,16 @@
     -webkit-box-shadow: 0px 0px 10px rgba(0, 102, 150, 2);
     width: 80%;
 }
+.loader{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(../img/load.gif) 50% 50% no-repeat rgb(169,169,169,0.3)
+}
+
 .form-row {
   display: flex;
   flex-wrap: wrap;
